Bugfix: Removes calls to attachment server on ars-to-specify sync